--- a/stackbit.yml
+++ b/stackbit.yml
@@ -1,5 +1,5 @@
-stackbitVersion: "~0.2.39"
-uploadDir: "images"
+stackbitVersion: ~0.2.39
+uploadDir: images
 metadata:
   title: Libris
   description: A documentation theme
@@ -17,7 +17,11 @@ models:
         name: palette
         label: Palette
         description: The palette of the theme.
-        options: [blue, green, navy, violet]
+        options:
+          - blue
+          - green
+          - navy
+          - violet
         default: blue
       - type: object
         name: palettes
@@ -172,7 +176,9 @@ models:
             - type: enum
               name: type
               label: Type
-              options: [collection, page]
+              options:
+                - collection
+                - page
               default: collection
             - type: string
               name: path
@@ -221,7 +227,11 @@ models:
         items:
           type: reference
           labelField: title
-          models: [contentblock, ctablock, featuresblock, heroblock]
+          models:
+            - contentblock
+            - ctablock
+            - featuresblock
+            - heroblock
   blog:
     type: page
     label: Blog
@@ -271,7 +281,9 @@ models:
         items:
           type: reference
           labelField: title
-          models: [contentblock, ctablock]
+          models:
+            - contentblock
+            - ctablock
   showcase:
     type: page
     label: Showcase
@@ -388,7 +400,8 @@ models:
   contentblock:
     type: object
     label: Content Section
-    extends: [section]
+    extends:
+      - section
     fields:
       - name: component
         default: content_block.html
@@ -408,7 +421,8 @@ models:
   ctablock:
     type: object
     label: Call to Action Section
-    extends: [section]
+    extends:
+      - section
     fields:
       - name: component
         default: cta_block.html
@@ -424,7 +438,8 @@ models:
   featuresblock:
     type: object
     label: Features Section
-    extends: [section]
+    extends:
+      - section
     fields:
       - name: component
         default: features_block.html
@@ -455,7 +470,8 @@ models:
   heroblock:
     type: object
     label: Hero Section
-    extends: [section]
+    extends:
+      - section
     fields:
       - name: component
         default: hero_block.html
@@ -500,3 +516,8 @@ models:
           - type: color
             name: accent2
             label: accent 2
+stackbit_banner:
+  show_banner: true
+  name: Libris
+  launch_url: 'https://app.stackbit.com/wizard?theme=libris'
+  github_url: 'https://github.com/stackbithq/stackbit-theme-libris'
