--- a/stackbit.yml
+++ b/stackbit.yml
@@ -5,9 +5,23 @@ metadata:
   description: A documentation theme
   author: Stackbit
   authorURL: 'https://www.stackbit.com'
-  images:
-    small: images/demo-256x192.png
-    large: images/demo-1024x768.png
+  palettes:
+    blue:
+      images:
+        small: images/demo-256x192.png
+        large: images/demo-1024x768.png
+    green:
+      images:
+        small: images/demo-256x192.png
+        large: images/demo-1024x768.png
+    navy:
+      images:
+        small: images/demo-256x192.png
+        large: images/demo-1024x768.png
+    violet:
+      images:
+        small: images/demo-256x192.png
+        large: images/demo-1024x768.png
 models:
   config:
     type: config
