added option to serve docs from root page

--- a/stackbit.yml
+++ b/stackbit.yml
@@ -162,8 +162,8 @@ models:
       - type: string
         name: root_folder
         label: Root Folder
-        description: The URL path under which the documentation pages will be generated.
-        default: docs
+        description: The path under which the documentation pages will be generated. For example, set to "/" to put all documentation pages at root, or set to "/docs/" to put all documentation pages under "/docs/".
+        default: /docs/
         required: true
       - type: list
         name: sections
